# stockpile

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FUNDING.yml  README.md  pyproject.toml  requirements.txt  run.py
cost-basis-charts/: CLAUDE.md  README.md  config.toml.example  pyproject.toml  run_charts.py
google-sheets-setup/: CLAUDE.md  (+1 more)
options-scanner/: CLAUDE.md  INTERPRETING_IV.md  README.md  SCHWAB_DATA_SOURCE.md  SKILL.md  config.toml.example  pyproject.toml  requirements.txt  run_app.py
options-scanner/assets/: favicon.xcf
options-scanner/options_scanner/: chain.py  chain_common.py  config.py  explanation.py  fetch.py  iv_algorithms.py  iv_filters.py  iv_history.py  iv_scores.py  iv_surface.py  main.py  moomoo_chain.py  recent_scans.py  schwab_chain.py  spreads.py  styles.css
options-scanner/options_scanner/compute/: top_ranks.py
options-scanner/options_scanner/display/: chain_table.py  cli.py  iv_chart.py  iv_surface_3d.py  leaderboard.py  portfolio_action_card.py  scan_results.py  scan_stamp.py  surface_diagnostics.py
options-scanner/options_scanner/tabs/: gex.py  live_charts.py  portfolio.py  single.py  spreads.py
options-scanner/stocks_shared/: black_scholes.py  yahoo.py
options-scanner/stocks_shared/parsers/: merrill.py
options-scanner/stocks_shared/stocks_shared/: schwab_live.py
options-scanner/tests/: test_iv_algorithms.py  test_iv_filters.py  test_iv_history.py  test_iv_scores.py  test_iv_surface.py
shared/: pyproject.toml
shared/stocks_shared/: analysis.py  yahoo.py
shared/stocks_shared/parsers/: __init__.py  robinhood.py  schwab.py
(+33 files in other folders)
