[project]
name = "options-scanner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "stocks-shared",
    "numpy",
    "lxml",
    "streamlit",
    "tabulate",
    "yfinance",
    "schwab-py",
    "moomoo-api",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["options_scanner"]
