[project]
name = "stocks-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "yfinance",
    "pandas",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stocks_shared"]
